[package]
name = "whirlpool-cpi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "whirlpool_cpi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
bytemuck_derive = { version = "=1.8.1" }
solana-program = { version = "=1.18.17" }                 # solana-cli version must be the same: sh -c "$(curl -sSfL https://release.anza.xyz/v1.18.17/install)"
anchor-lang = { version = "=0.29.0" }
anchor-spl = { version = "=0.29.0", features = ["memo"] }
orca_whirlpools_client = { version = "^2.0.0" }

# bytemuck_derive = { version = "=1.8.1" }
# solana-program = { version = "=1.18.17" } # solana-cli version must be the same: sh -c "$(curl -sSfL https://release.anza.xyz/v1.18.17/install)"
# anchor-lang = { version = "=0.30.1" }
# anchor-spl = { version = "=0.30.1", features = ["memo"] }
# orca_whirlpools_client = { version = "^2.0.0" }

# bytemuck_derive = { version = "=1.8.1" }
# solana-program = { version = "=2.1.0" } # solana-cli version must be the same: sh -c "$(curl -sSfL https://release.anza.xyz/v2.1.0/install)"
# anchor-lang = { version = "=0.31" }
# anchor-spl = { version = "=0.31", features = ["memo"] }
# orca_whirlpools_client = { version = "^2.0.0" }
